# conversations

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindGLIB.cmake  VersionConversations.cmake  changelog.h.cmake  config-conversations.h.cmake
debian/: changelog  control  conversations.prerm  conversations.xsession  rules
desktop/: CMakeLists.txt  conversations.desktop
src/: CMakeLists.txt  aboutwidget.cpp  aboutwidget.h  aboutwidget.ui  assets.qrc  assets_localdev.qrc  assets_maemo.qrc  chatwindow.cpp  chatwindow.h  chatwindow.ui  chatwindow_widgets.ui  composewindow.cpp  composewindow.h  composewindow.ui  conv-intl.h  conversations.cpp  conversations.h  emojipicker.cpp  emojipicker.h  emojis.h  launcher.c  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  previewwindow.cpp  previewwindow.h  previewwindow_widgets.ui  searchwindow.cpp  searchwindow.h  searchwindow.ui  searchwindow_widgets.ui  settings.cpp  settings.h  settings.ui  settingswidget.cpp  settingswidget.h  settingswidget.ui  window_joinchannel.cpp  window_joinchannel.h  (+1 more)
src/contacts/: TpContactsModel.cpp  TpContactsModel.h  TpContactsWidget.cpp  TpContactsWidget.h  TpContactsWidget.ui  TpContactsWindow.cpp  TpContactsWindow.h  TpContactsWindow.ui
src/lib/: PreviewImageProvider.cpp  PreviewImageProvider.h  QClickFrame.h  QGrabScrollTextEdit.h  QRichItemDelegate.cpp  QRichItemDelegate.h  abook.cpp  abook.h  abook_roster.cpp  abook_roster.h  clion_debug.h  colors.cpp  colors.h  config.cpp  config.h  downloadpreview.cpp  downloadpreview.h  globals.h  http.cpp  http.h  imagepinch.cpp  imagepinch.h  ipc.cpp  ipc.h  kotki.cpp  kotki.h  logger.cpp  logger.h  mainwindow.h  rtcom.cpp  rtcom.h  state.cpp  state.h  tp.cpp  tp.h  utils.cpp  utils.h  utils_c.c  utils_c.h  webpreviewmodel.cpp  (+1 more)
src/lib/abook/: CMakeLists.txt  abook.cpp  abook.h  abook_contact.h  abook_public.cpp  abook_public.h  abook_roster.cpp  abook_roster.h
src/lib/libnotify-qt/: Notification.cpp  Notification.h
src/lib/logger_std/: logger_std.cpp  logger_std.h
src/lib/qtcsv/: abstractdata.h  contentiterator.cpp  reader.cpp  reader.h  stringdata.cpp  variantdata.cpp  variantdata.h  writer.cpp  writer.h
src/lib/rtcom/: CMakeLists.txt  rtcom.cpp  rtcom.h  rtcom_models.h  rtcom_public.cpp  rtcom_public.h
src/lib/tp/: tp.cpp  tp.h
src/models/: ChatMessage.cpp  ChatMessage.h  ChatModel.cpp  ChatModel.h  ContactItem.cpp  ContactItem.h  OverviewServiceModel.cpp  OverviewServiceModel.h  PreviewItem.cpp  PreviewItem.h
src/overview/: OverviewModel.cpp  OverviewModel.h  QCenteredIconDelegate.cpp  QCenteredIconDelegate.h  overviewRichDelegate.css  overviewbtnwidget.cpp  overviewbtnwidget.h  overviewbtnwidget.ui  overviewwidget.cpp  overviewwidget.h  overviewwidget.ui
src/qml/: Main.qml  Overview.qml  Search.qml  overview.qml
src/qml/.dev/: README.md  chatty.qml  irssi.qml  overview.qml  search.qml  whatsthat.qml
src/qml/chat/chatty/: chatty.qml  chatty.qrc
src/qml/chat/irssi/: irssi.qml  irssi.qrc
src/qml/chat/whatsthat/: MessageDelegate.qml  Preview.qml  PreviewImage.qml  PreviewText.qml  whatsthat.qml  whatsthat.qrc
src/qml/components/: ChatListView.qml  ChatRoot.qml  ChatScrollToBottomButton.qml  EmojiText.qml  PlainText.qml  ShaderMatrixRain.qml  StackViewFancy.qml  qml_components.qrc
src/requests/: RequestModel.cpp  RequestModel.h  requestwidget.cpp  requestwidget.h  requestwidget.ui
telepathy/: CMakeLists.txt  Conversations.client  org.freedesktop.Telepathy.Client.Conversations.service
tools/: fix_elv1_db.py  increment_and_tag.py  randomize-el-v1.py
